fixing CSS issue with grid popping out of container on pagination change

--- a/angularjs/ui2/src/styles/override.css
+++ b/angularjs/ui2/src/styles/override.css
@@ -142,10 +142,6 @@
     height: 550px;
 }
 
-.ui-grid-canvas {
-    min-height: 465px;
-}
-
 .grid-small {
     width: 100%;
     height: 200px;
@@ -556,13 +552,6 @@ form label {
     -webkit-border-radius: 6px 0 6px 6px;
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
-}
-
-.dropdown-fixed {
-    position: fixed;
-    z-index: 1000;
-    top: 60px;
-    margin-right: 64px;
 }
 
 
@@ -1026,7 +1015,7 @@ input[type=radio] {
 }
 
 .modal-header .close {
-    margin-top: 0px;
+    margin-top: -10px;
 }
 
 .drop-shadow {
@@ -1430,10 +1419,10 @@ div.datepicker {
     padding-bottom: 10px;
 }
 .popover-confirm .popover-message {
+    margin-bottom:3px;
 }
 .popover-confirm .form-actions {
     text-align: right;
-    padding-right: 10px;
 }
 
 /* For validation within Angular ui-select elements */
@@ -1642,6 +1631,7 @@ div[disabled] {
 
 /* Set modal to mimic default browser look/feel */
 
+
 .modal-default .modal-header {
     padding: 10px;
     background-color: #D5D5D5;
@@ -1841,22 +1831,13 @@ body.assign-ownership #user_list_admin_priv, body.assign-ownership #user_list_st
     margin-right: 10px;
 }
 
-
 .edit-off .ui-grid-row:nth-child(odd):hover .ui-grid-cell.ui-grid-row-header-cell,
 .edit-off .ui-grid-row:nth-child(even):hover .ui-grid-cell.ui-grid-row-header-cell {
     background: #eee;
 }
-.edit-off .btn-danger {display: none;}
 
-body.people .ui-grid-selection-row-header-buttons.ui-grid-icon-ok,
-body.organizations .ui-grid-selection-row-header-buttons.ui-grid-icon-ok,
 .edit-off .ui-grid-selection-row-header-buttons.ui-grid-icon-ok {
     display: none;
-}
-
-.btn-spacer {
-    margin-top: 8px;
-    margin-right: 4px;
 }
 
 body.trial-abstraction-search .field_wrapper {
@@ -1932,10 +1913,8 @@ body.trial-abstraction-search .form-horizontal label.control-label.checkbox3 {
     color: #444;
 }
 
-.auto-height.ui-grid, .ui-grid-viewport {
-    height: auto !important;
-}
 
-.auto-height.ui-grid .ui-grid-canvas{
-    min-height: 0;
+/* min-height ~ grid height for cases where grid is too small for actions menu to be visible */
+.ui-grid-canvas {
+    min-height: 465px;
 }
